--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Deploy with CloudFormation
+name: CI/CD Deploy with Terraform
 
 on:
   push:
@@ -10,53 +10,59 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1️⃣ Checkout Frontend
-    - name: Checkout Frontend
+    # 1️⃣ Checkout Frontend Repo
+    - name: Checkout Frontend Repo
       uses: actions/checkout@v3
       with:
         repository: 'Ajinkya-0599/terraform-amsa-frontend'
         path: frontend
 
-    # 2️⃣ Checkout Backend
-    - name: Checkout Backend
+    # 2️⃣ Checkout Backend Repo
+    - name: Checkout Backend Repo
       uses: actions/checkout@v3
       with:
         repository: 'Ajinkya-0599/terraform-amsa-backend'
         path: backend
 
-    # 3️⃣ Setup Node.js
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
+    # 3️⃣ Setup Terraform
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
       with:
-        node-version: '20'
+        terraform_version: 1.9.5
 
-    # 4️⃣ Build Frontend
-    - name: Build Frontend
-      working-directory: frontend
-      run: |
-        npm install
-        npm run build
-
-    # 5️⃣ Prepare Backend
-    - name: Build Backend
-      working-directory: backend
-      run: npm install
-
-    # 6️⃣ Deploy CloudFormation Stack
-    - name: Deploy CloudFormation Stack
-      uses: aws-actions/aws-cloudformation-github-deploy@v1
-      with:
-        name: amsa-stack
-        template: ./frontend/terraform/main.tf   # <-- corrected path
-        no-fail-on-empty-changeset: true
-        capabilities: CAPABILITY_NAMED_IAM
-        parameter-overrides: KeyName=${{ secrets.EC2_KEY_NAME }} 
+    # 4️⃣ Terraform Init
+    - name: Terraform Init
+      working-directory: frontend/terraform
+      run: terraform init
       env:
-        AWS_REGION: ${{ secrets.AWS_REGION }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
 
-    # 7️⃣ Get EC2 Instance IP from Tag Name
+    # 5️⃣ Terraform Validate
+    - name: Terraform Validate
+      working-directory: frontend/terraform
+      run: terraform validate
+
+    # 6️⃣ Terraform Plan
+    - name: Terraform Plan
+      working-directory: frontend/terraform
+      run: terraform plan -out=tfplan
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+
+    # 7️⃣ Terraform Apply
+    - name: Terraform Apply
+      working-directory: frontend/terraform
+      run: terraform apply -auto-approve tfplan
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+
+    # 8️⃣ Get EC2 Public IP
     - name: Get EC2 Public IP
       id: get_ip
       run: |
@@ -71,7 +77,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
 
-    # 8️⃣ Deploy Frontend & Backend to EC2
+    # 9️⃣ Deploy Frontend & Backend to EC2 via SSH
     - name: Deploy to EC2
       uses: appleboy/ssh-action@v1.0.0
       with:
@@ -80,15 +86,14 @@ jobs:
         key: ${{ secrets.EC2_SSH_KEY }}
         port: 22
         script: |
-          # Clone repos if not present
+          # Clone or update repos
           [ ! -d "/home/ubuntu/terraform-amsa-frontend" ] && git clone https://github.com/Ajinkya-0599/terraform-amsa-frontend.git /home/ubuntu/terraform-amsa-frontend
           [ ! -d "/home/ubuntu/terraform-amsa-backend" ] && git clone https://github.com/Ajinkya-0599/terraform-amsa-backend.git /home/ubuntu/terraform-amsa-backend
 
-          # Pull latest changes
           cd /home/ubuntu/terraform-amsa-frontend && git pull origin main
           cd /home/ubuntu/terraform-amsa-backend && git pull origin main
 
-          # Frontend setup
+          # Build and deploy frontend
           cd /home/ubuntu/terraform-amsa-frontend
           npm install
           npm run build
@@ -102,7 +107,7 @@ jobs:
           npm install
           pm2 restart terraform-amsa-backend || pm2 start server.js --name terraform-amsa-backend --watch
 
-          # Reload services
+          # Restart Nginx and PM2
           sudo nginx -t
           sudo systemctl restart nginx
           pm2 save
